# SimAb

./: .gitignore  1Code_discription.txt  Code_summary.txt  Corrolation.ipynb  LICENSE  Main.ipynb  Metallicity.ipynb  Mrun.py  Plot.ipynb  Plot1.ipynb  Plot_data.ipynb  Plot_disk.ipynb  Plot_try.ipynb  README.md  Srun.py  Test (copy).ipynb  Test.ipynb  Testing_Latex_Titles.ipynb  Untitled.ipynb  analyse.py  chem.py  disk.py  planet.py  plot1.py  plot2.py  plot3.py  plot_chem.py  pyproject.toml  report_metallicity_problem.md  run.py  run_sum.txt  setup.py  test.py  test.txt  test_ch.txt  variable.py  write.py
.ipynb_checkpoints/: Plot-checkpoint.ipynb  Plot1-checkpoint.ipynb  Plot_data-checkpoint.ipynb  Plot_disk-checkpoint.ipynb  Plot_try-checkpoint.ipynb
SimAb_test/: Mrun.py  Srun.py  chem.py  disk.py  planet.py  run.py  write.py
SimAb_test/input/: molec_ab.txt
Simab_backup/: planet.py  run.py  write.py
Simab_backup/input/: N_Atom.txt
input/: 1_Chem_T.ipynb  N_Atom.txt  N_Molec.atm  PatrickcodeforNiloo.py  molec_ab_2.txt  test_code.py
input/.ipynb_checkpoints/: 1_Chem_T-checkpoint.ipynb
input/Old_verssion/: Atom (copy).txt  Atom.txt  Mg_Al_balance_outcome  Molec.atm  Molec1.atm  Molec2.atm  chem_code.ipynb  molec_ab (another copy).txt  molec_ab (copy).txt  new_chem.ipynb
input/Old_verssion/.ipynb_checkpoints/: chem_code-checkpoint.ipynb  (+1 more)
other_versions/: Run1.py  chem_0.py  disk1.py  planet.py  planet_i.py  planet_m.py  planet_mig.py  run.inp
src/: Srun.py  disk.py  planet.py  test.py
src/SimAb_test/: __init__.py  chem.py
src/input/: N_Atom.txt
