[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SimAb_test"
version = "0.0.1"
authors = [
  { name="Niloofar Khorshid", email="niloouniv@gmail.com" },
]
description = "A small example package of SimAb"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Issues = "https://https://github.com/nkhorshid/SimAb"
