[build-system]
requires = ["hatchling", "setuptools == 68.2.2"]
build-backend = "hatchling.build"

[project]
name = "SimAb_test"
version = "0.0.2"
authors = [
  { name="Niloofar Khorshid", email="niloouniv@gmail.com" },
]
description = "A small example package of SimAb"
readme = "README.md"
license= {file = "LICENCE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Issues = "https://https://github.com/nkhorshid/SimAb"
